@@ -7,29 +7,33 @@ public class DBConnection {
         try {
             Class.forName("com.mysql.cj.jdbc.Driver");
 
-            String host = getEnv("DB_HOST", "localhost");
-            String port = getEnv("DB_PORT", "3306");
-            String database = getEnv("DB_NAME", "studentbridge");
-            String user = getEnv("DB_USER", "root");
-            String password = getEnv("DB_PASSWORD", "");
+            String dbHost = getEnvOrDefault("DB_HOST", "localhost");
+            String dbPort = getEnvOrDefault("DB_PORT", "3306");
+            String dbName = getEnvOrDefault("DB_NAME", "studentbridge");
+            String dbUser = getEnvOrDefault("DB_USER", "root");
+            String dbPassword = getEnvOrDefault("DB_PASSWORD", "mezbah143");
+            String dbUrl = System.getenv("DB_URL");
 
-            String url = "jdbc:mysql://" + host + ":" + port + "/" + database
-                    + "?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8";
+            String jdbcUrl = (dbUrl != null && !dbUrl.isBlank())
+                ? dbUrl
+                : "jdbc:mysql://" + dbHost + ":" + dbPort + "/" + dbName
+                    + "?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8"
+                    + "&allowPublicKeyRetrieval=true&useSSL=false";
 
-            Connection con = DriverManager.getConnection(url, user, password);
+            Connection con = DriverManager.getConnection(jdbcUrl, dbUser, dbPassword);
 
-            System.out.println("Connected to MySQL database: " + database + " at " + host + ":" + port);
+            System.out.println("Connected to MySQL.");
             return con;
 
         } catch (Exception e) {
-            System.out.println("Database connection failed.");
+            System.out.println("Connection to MySQL failed.");
             e.printStackTrace();
             return null;
         }
     }
 
-    private static String getEnv(String key, String defaultValue) {
+    private static String getEnvOrDefault(String key, String fallback) {
         String value = System.getenv(key);
-        return value == null || value.trim().isEmpty() ? defaultValue : value.trim();
+        return (value == null || value.isBlank()) ? fallback : value;
     }
 }
